--- a/styles/global.css
+++ b/styles/global.css
@@ -60,3 +60,7 @@ body {
 ::-webkit-scrollbar-track {           
     background-color: var(--bg-color);
 }
+
+.utterances {
+  max-width: 100% !important;
+}
